--- a/main.html
+++ b/main.html
@@ -1,5 +1,11 @@
+<!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <title>İlk Web Sayfam</title>
+  </head>
   <body>
-    <title>Merhaba Dünya</title>
+    <h1>Merhaba dünya!</h1>
+    <p>İlk web sayfama hoş geldiniz!</p>
   </body>
 </html>
